--- a/qualtricssurvey/private/edit.less
+++ b/qualtricssurvey/private/edit.less
@@ -1,3 +1,11 @@
 .qualtricssurvey_edit {
-    // TODO: Style editor here
+
+    .content-source-textarea {
+        width: 100%;
+        height: 200px;
+    }
+    
+    .content-source-div {
+        display: none;
+    }
 }
